# LearningSampling

./: CMakeLists.txt  CollisionCostCalculator.cpp  CollisionCostCalculator.h  Context.cpp  Context.h  ConversationCostCalculator.cpp  ConversationCostCalculator.h  CostCalculator.cpp  CostCalculator.h  CostFunction.cpp  CostFunction.h  DistanceCostCalculator.cpp  DistanceCostCalculator.h  Furniture.cpp  Furniture.h  Global.cpp  Global.h  MContext.cpp  MContext.h  MGMM.cpp  MGMM.h  MGSampler.cpp  MGSampler.h  MessageFormat.txt  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  anglesnapper.cpp  anglesnapper.h  balancecost.cpp  balancecost.h  balancecostcalculator.cpp  balancecostcalculator.h  bayesiansampler.cpp  bayesiansampler.h  clearancecost.cpp  clearancecostcalculator.cpp  clearancecostcalculator.h  clipper.cpp  (+41 more)
Engine/: CMakeLists.txt
Engine/include/Engine/: anglesnapper.h  clearancecost.h  collisioncost.h  conversationcost.h  cost.h  costcomposite.h  database.h  distancecost.h  expansioncost.h  finealignment.h  freeusedspaces.h  roomfurnisher.h  roomfurnisherfactory.h  roomoptimiser.h  roomsampler.h  sidetableplacer.h
Engine/src/: anglesnapper.cpp  balancecost.cpp  bayesiansampler.cpp  clearancecost.cpp  collisioncost.cpp  conversationcost.cpp  cost.cpp  costcomposite.cpp  database.cpp  distancecost.cpp  expansioncost.cpp  finealignment.cpp  freeusedspaces.cpp  mgmm.cpp  roomfurnisher.cpp  roomfurnisherfactory.cpp  roomoptimiser.cpp  roomsampler.cpp  sidetableplacer.cpp
Executables/: CMakeLists.txt  client.cpp  engine.cpp  server.cpp  test.cpp
Geometry/: CMakeLists.txt
Geometry/include/Geometry/: Global.h  clipper.hpp
Geometry/src/: Global.cpp  clipper.cpp
Model/: CMakeLists.txt
Model/include/Model/: Furniture.h  furniturecatalog.h  room.h
Model/src/: Furniture.cpp  furniturecatalog.cpp  room.cpp
Server/: CMakeLists.txt
Server/include/Server/: dispatcher.h  messageconsumer.h  workitem.h
Server/src/: dispatcher.cpp  messageconsumer.cpp  workitem.cpp
TCPConnection/: CMakeLists.txt
TCPConnection/include/TCPConnection/: furnishmessage.h  message.h  messagestreamwrapper.h  replyfurnishmessage.h  stream.h  streamwrapper.h  tcpacceptor.h  tcpconnector.h  tcpstream.h
TCPConnection/src/: furnishmessage.cpp  message.cpp  messagestreamwrapper.cpp  replyfurnishmessage.cpp  stream.cpp  streamwrapper.cpp  tcpacceptor.cpp  tcpconnector.cpp  tcpstream.cpp
Thread/: CMakeLists.txt
Thread/include/Thread/: thread.h  wqueue.h
Thread/src/: thread.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: properties.h
Utils/src/: properties.cpp
