cmake_minimum_required(VERSION 2.8)
project( TestGMM )
add_executable(prog main.cpp Furniture.cpp datafiles.cpp datafiles.h mgmm.h  mgmm.cpp properties.cpp properties.h Scene.cpp Global.h  MContext.cpp Sampler.cpp)
include_directories(/usr/include/libxml2)
target_link_libraries( prog mlpack armadillo CGAL gmp)
